@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-19T01:17:34Z",
+  "timestamp" : "2025-09-20T01:13:53Z",
   "count_outdated" : 1948,
   "uniques_outdated" : 1187,
-  "count" : 1970,
-  "uniques" : 1208,
+  "count" : 1971,
+  "uniques" : 1209,
   "clones" : [
     {
       "timestamp": "2025-09-07T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
