@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 13,
+  "count": 23,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2025-09-07T00:00:00Z",
@@ -51,6 +51,11 @@
       "timestamp": "2025-09-17T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
